--- a/index.Rmd
+++ b/index.Rmd
@@ -44,7 +44,7 @@ Links to more code and publications can be found on our academic websites:
 ### Citation {-}
 
 
-Holmes, E. E., M. D. Scheuerell, and E. J. Ward. Multivariate autoregressive modeling for the environmental sciences. NOAA Fisheries, Northwest Fisheries Science Center, 2725 Montlake Blvd E., Seattle, WA 98112.  Contacts eeholmes@uw.edu, eward@uw.edu, and scheuerl@uw.edu.
+Holmes, E. E., M. D. Scheuerell, and E. J. Ward. Multivariate Autoregressive Modeling for the Environmental Sciences. NOAA Fisheries, Northwest Fisheries Science Center, 2725 Montlake Blvd E., Seattle, WA 98112.  Contacts eeholmes@uw.edu, eward@uw.edu, and scheuerl@uw.edu.
 
 
 ```{r include=FALSE}
